[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/grass.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Coin.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/Powerup.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Cactus.tscn" type="PackedScene" id=11]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Coin = ExtResource( 4 )
Powerup = ExtResource( 10 )
Cactus = ExtResource( 11 )
playtime = 30

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Powerup" parent="." instance=ExtResource( 10 )]

[node name="CoinContainer" type="Node2D" parent="."]

[node name="CactusContainer" type="Node2D" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
